# Informatik-Praktikum-listcomprt

./: .gitlab-ci.yml  ChangeLog.md  ListComprT.cabal  README.md  package.yaml  stack.yaml
app/: Main.hs
src/: Comprehension.hs  ConcatMap.hs  MapFilter.hs
test/: BUILD.bazel  ComprehensionTest.hs  ConcatMapTest.hs  MapFilterTest.hs
