load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_binary",
    "haskell_toolchain_library",
)

haskell_toolchain_library(name = "base")

haskell_binary(
    name = "ComprehensionTest",
    srcs = ["ComprehensionTest.hs"],
    main_function = "ComprehensionTest",
    deps = [
        ":base",
        "@stackage//:QuickCheck",
        "//ListCompr/src:Comprehension",
    ],
)

haskell_binary(
    name = "MapFilterTest",
    srcs = ["MapFilterTest.hs"],
    main_function = "MapFilterTest",
    deps = [
        ":base",
        "@stackage//:QuickCheck",
        "//ListCompr/src:MapFilter",
    ],
)

haskell_binary(
    name = "ConcatMapTest",
    srcs = ["ConcatMapTest.hs"],
    main_function = "ConcatMapTest",
    deps = [
        ":base",
        "@stackage//:QuickCheck",
        "//ListCompr/src:ConcatMap",
    ],
)

